--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,4 @@
-<link rel="shortcut icon" type="image/x-icon" href="pexels-photo-344775.jpeg">
+
+<head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
